[package]
name = "so_cold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.13.1"
serde_json = "1.0.128"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"] }